--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -37,8 +37,8 @@
     --card-foreground: 0 0% 98%;
     --popover: 0 0% 3.9%;
     --popover-foreground: 0 0% 98%;
-    --primary: 0 0% 98%;
-    --primary-foreground: 0 0% 9%;
+    --primary: 0 0% 14.9%;
+    --primary-foreground: 0 0% 98%;
     --secondary: 0 0% 14.9%;
     --secondary-foreground: 0 0% 98%;
     --muted: 0 0% 14.9%;
@@ -132,15 +132,15 @@
 }
 
 ::-webkit-scrollbar-track {
-  background: #18181B;
+  background: hsl(var(--background));
   border-radius: 10px;
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #363639;
+  background: hsl(var(--muted));
   border-radius: 10px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: #3F3F46;
+  background: hsl(var(--muted-foreground));
 }
